--- a/Home.html
+++ b/Home.html
@@ -19,7 +19,7 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item">
-          <a class="nav-link mmm" href="#">2. oldal</a>
+          <a class="nav-link mmm" href="./Secound.html">2. oldal</a>
         </li>
         <li class="nav-item">
             <a class="nav-link mmm" href="#">3. oldal</a>
@@ -36,12 +36,15 @@
 
 <div class="container-fluid">
   <div class="row">
-    <div class="col-sm-12 col-md-5 col-lg-5">
-      <img class="img-fluid pfp" src="./neumann-janos-003-wikipedia.jpg" alt="Neumann János">
-    </div>
-    <div class="col-sm-12 col-md-7 col-lg-7">
-      <p class="tx mmm">Margittai Neumann János (John von Neumann, született: Neumann János Lajos) (Budapest, Lipótváros, 1903. december 28. – Washington, 1957. február 8.) magyar születésű matematikus. Kvantummechanikai elméleti kutatásai mellett a digitális számítógép elvi alapjainak lefektetésével vált ismertté.</p>
-    </div>
+
+      <div class="col-sm-12 col-md-5 col-lg-5">
+        <img class="img-fluid pfp" src="./neumann-janos-003-wikipedia.jpg" alt="Neumann János">
+      </div>
+
+      <div class="col-sm-12 col-md-7 col-lg-7">
+        <p class="tx mmm">Margittai Neumann János (John von Neumann, született: Neumann János Lajos) (Budapest, Lipótváros, 1903. december 28. – Washington, 1957. február 8.) magyar születésű matematikus. Kvantummechanikai elméleti kutatásai mellett a digitális számítógép elvi alapjainak lefektetésével vált ismertté.</p>
+      </div>
+
   </div>
 
     <p class="pomt">.</p>
@@ -49,18 +52,20 @@
     <p class="pomt">.</p>
 
   <div class="row">
-    <div class="col-sm-12 col-md-9 col-lg-8">
+    <div class="col-sm-12 col-md-6 col-lg-8">
       <p class="mmm tx2">
         Édekességek Nemann Jánosról:
         János már korán kortársait jóval meghaladó képességekről tett tanúbizonyságot beszélt magyarul, németül, franciául, latinul, ógörögül kitűnően számolt fejben.
         Az elektronikus számítógépek logikai tervezésében kiemelkedő érdemeket szerzett Neumann-elvek: kettes számrendszer alkalmazása, memória, programtárolás, utasítás rendszer 1944 – EDVAC megépítése (az első olyan számítógép, amely a memóriában tárolja a programot is) együtt dolgozott: Kemény Jánossan, Szilárd Leóval, és Gróf Andrással (Andrew Grove).
         Budapesten és Székesfehérváron utcát, Budapesten főiskolai kart és szakközépiskolát, Egerben pedig gimnáziumot neveztek el róla a Financial Times 2000-ben a 20. század emberének nevezte őt.
       </p>
+    </div>
+  
+    <div class="col-sm-12 col-md-6 col-lg-4 float-right">
+        <img class="doki img-fluid" src="./Dokika.jpg.png" alt="Neumann">
+    </div>
 
   </div>
-      <img class="col-sm-12 col-md-3 col-lg-4 float-right img-fluid" src="./neupic/6-02-kep01-nagy.svg" alt="Neumann">
-  </div>
-
       <h4 class="mmm fels">A Neumann-elvek:</h4>
         <ul>
           <li class="mmm">belső program- és adattárolás</li>
@@ -69,16 +74,22 @@
           <li class="mmm">központi vezérlőegység alkalmazása</li>
         </ul>
 
-<div>
-  <p class="idt">„A munka oroszlánrészét akkor kell majd elvégezni, ha a gép már elkészült, és használható lesz. Ekkor magát a gépet kell majd kísérleti eszközként fölhasználni.”</p><p class="mmm"> - Neumann János</p>
-</div>
 
-<p class="pomt">.</p>
-<p class="pomt">.</p>
+    <div>
+      <p class="mmm idt">„A munka oroszlánrészét akkor kell majd elvégezni, ha a gép már elkészült, és használható lesz. Ekkor magát a gépet kell majd kísérleti eszközként fölhasználni.”</p><p class="mmm italic"> - Neumann János</p>
+    </div>
+</div>    
 
-<footer>
-  <p>Pongrácz Gábor, Birovits Bence</p>
-  <p>BMSZC Neumann János Informatikai Technikum</p>
+  <p class="pomt">.</p>
+  <p class="pomt">.</p>
+
+<footer class="container-fluid">
+  <div class="row">
+    <div class="col-sm-12 col-md-12 col-lg-12">
+      <p>Pongrácz Gábor, Birovits Bence</p>
+      <p>BMSZC Neumann János Informatikai Technikum</p>
+    </div>
+  </div>
 </footer>
     
 </body>
