--- a/Home.html
+++ b/Home.html
@@ -4,15 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Neumann János</title>
+    <title>Neumann János (bevezető)</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  
+
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand ms-3 cc" href="#">Neu</a>
+  <a class="navbar-brand ms-3 cc" href="./Home.html">Neu</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -22,39 +22,41 @@
           <a class="nav-link mmm" href="./Secound.html">2. oldal</a>
         </li>
         <li class="nav-item">
-            <a class="nav-link mmm" href="#">3. oldal</a>
+            <a class="nav-link mmm" href="./Third.html">3. oldal</a>
         </li>
       </ul>
     </div>
 </nav>
 
 <div>
-  <h1>Neumann János</h1>
+  <br>
+  <h1><b>Neumann János</b></h1>
+  <br>
   <hr>
-  <p class="pomt">.</p>
+  <br>
 </div>
 
 <div class="container-fluid">
   <div class="row">
 
       <div class="col-sm-12 col-md-5 col-lg-5">
-        <img class="img-fluid pfp" src="./neumann-janos-003-wikipedia.jpg" alt="Neumann János">
+        <img class="mmm img-fluid pfp" src="./neumann-janos-003-wikipedia.jpg" alt="Neumann János">
       </div>
 
       <div class="col-sm-12 col-md-7 col-lg-7">
-        <p class="tx mmm">Margittai Neumann János (John von Neumann, született: Neumann János Lajos) (Budapest, Lipótváros, 1903. december 28. – Washington, 1957. február 8.) magyar születésű matematikus. Kvantummechanikai elméleti kutatásai mellett a digitális számítógép elvi alapjainak lefektetésével vált ismertté.</p>
+        <p class="tx mmm"><b>Margittai Neumann János</b> (John von Neumann, született: Neumann János Lajos) (Budapest, Lipótváros, 1903. december 28. – Washington, 1957. február 8.) magyar születésű matematikus. Kvantummechanikai elméleti kutatásai mellett a digitális számítógép elvi alapjainak lefektetésével vált ismertté.</p>
       </div>
 
   </div>
 
-    <p class="pomt">.</p>
+    <br>
     <hr>
-    <p class="pomt">.</p>
+    <br>
 
   <div class="row">
     <div class="col-sm-12 col-md-6 col-lg-8">
       <p class="mmm tx2">
-        Édekességek Nemann Jánosról:
+        <b>Édekességek Nemann Jánosról:</b>
         János már korán kortársait jóval meghaladó képességekről tett tanúbizonyságot beszélt magyarul, németül, franciául, latinul, ógörögül kitűnően számolt fejben.
         Az elektronikus számítógépek logikai tervezésében kiemelkedő érdemeket szerzett Neumann-elvek: kettes számrendszer alkalmazása, memória, programtárolás, utasítás rendszer 1944 – EDVAC megépítése (az első olyan számítógép, amely a memóriában tárolja a programot is) együtt dolgozott: Kemény Jánossan, Szilárd Leóval, és Gróf Andrással (Andrew Grove).
         Budapesten és Székesfehérváron utcát, Budapesten főiskolai kart és szakközépiskolát, Egerben pedig gimnáziumot neveztek el róla a Financial Times 2000-ben a 20. század emberének nevezte őt.
@@ -62,11 +64,11 @@
     </div>
   
     <div class="col-sm-12 col-md-6 col-lg-4 float-right">
-        <img class="doki img-fluid" src="./Dokika.jpg.png" alt="Neumann">
+        <img class="mmm doki img-fluid" src="./Dokika.jpg.png" alt="Neumann">
     </div>
 
   </div>
-      <h4 class="mmm fels">A Neumann-elvek:</h4>
+      <h4 class="mmm fels"><b>Főbb Neumann-elvek:</b></h4>
         <ul>
           <li class="mmm">belső program- és adattárolás</li>
           <li class="mmm">teljesen elektronikus számítógép</li>
@@ -74,28 +76,24 @@
           <li class="mmm">központi vezérlőegység alkalmazása</li>
         </ul>
 
+        <br>
 
     <div>
       <p class="mmm idt">„A munka oroszlánrészét akkor kell majd elvégezni, ha a gép már elkészült, és használható lesz. Ekkor magát a gépet kell majd kísérleti eszközként fölhasználni.”</p><p class="mmm italic"> - Neumann János</p>
     </div>
 </div>    
 
-  <p class="pomt">.</p>
-  <p class="pomt">.</p>
+  <br>
   <br>
 
 <footer class="container-fluid">
   <div class="row">
     <div class="col-sm-12 col-md-12 col-lg-12">
-      <p>Pongrácz Gábor, Birovits Bence</p>
-      <p>BMSZC Neumann János Informatikai Technikum</p>
+      <p><b><i>Pongrácz Gábor, Birovits Bence</i></b></p>
+      <p><b><i>BMSZC Neumann János Informatikai Technikum</i></b></p>
     </div>
   </div>
 </footer>
     
 </body>
 </html>
-
-
-
-neu gomb - Neumann élete/Neumann suli oldal
