--- a/Secound.html
+++ b/Secound.html
@@ -1,1 +1,103 @@
-sdfsdfsdf
+<!DOCTYPE html>
+<html lang="hu">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Neumann János (Élete)</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="style.css">
+</head>
+<body>
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand ms-3 cc" href="./Home.html">Neu</a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+              <li class="nav-item">
+                <a class="nav-link mmm" href="./Secound.html">2. oldal</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link mmm" href="./Third.html">3. oldal</a>
+              </li>
+            </ul>
+          </div>
+    </nav>
+    
+<div>
+    <br>
+    <h1><b>Neumann János</b></h1>
+    <br>
+    <hr>
+    <br>
+</div>
+
+<div class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12 col-md-7 col-lg-8">
+            <p class="mmm tx2">   
+                <b>1903. december 28-án született Neumann Miksa és Kann Margit első gyermekeként Budapesten,</b> a Váci körút (ma Bajcsy-Zsilinszky út) 62. sz. házban. Jánosnak később két öccse is született: Mihály (1907) és Miklós (1911). Az édesapja Pécsről származott, és Budapesten ügyvédként dolgozott, aztán a Magyar Jelzálog- és Hitelbankhoz került először fő jogtanácsosi pozícióba, majd pedig a bank igazgatói székébe. János édesanyja, Margit a háztartást vezette és fiai nevelésével foglalatoskodott.
+            </p>
+        </div>
+        <div class="col-sm-12 col-md-5 col-lg-4">
+            <img class="mmm csalad img-fluid" src="./csalad.jpg" alt="Neumann Család">
+        </div>
+    </div>
+
+    <br>
+    <hr>
+    <br>
+
+    <div class="row">
+        <div class="col-sm-12 col-md-6 col-lg-6">
+            <img class="mmm img-fluid szb" src="./szob.png" alt="Neumann János szobor">
+        </div>
+
+        <div class="col-sm-12 col-md-6 col-lg-6">
+            <p class="mmm tx2">
+                <b>Iskolái</b>
+                Neumann már tízéves kora előtt csodagyereknek számított, majd 1913-ban szülei beíratták a híres fasori evangélikus főgimnáziumba (Ágostai Hitvallású Evangélikus Főgimnázium). Ebbe az iskolába járt a Nobel-díjas Wigner Jenő (1963, fizikai) és Harsányi János (1994, közgazdasági) is, ahol mindhárman Rátz László tanár úrtól tanulták a matematikát.
+            </p class="mmm tx2">
+            <p class="mmm tx2">
+                <b>Kvantummechanika</b>
+                A matematikusok 1900-as nemzetközi kongresszusán (International Congress of Mathematicians) állt elő a huszonhárom problémából álló híres listájával David Hilbert.
+            </p>
+            <p class="mmm tx2">
+                Ezek komoly hatással voltak a 20. század matematikájának fejlődésére. Ezek közül a hatodik a fizikai elméletek axiomatizálásáról szólt.
+            </p>
+
+        </div>
+    </div>
+    
+    <br>
+    <hr>
+    <br>
+
+    <div class="row">
+        <div class="tx2 col-sm-12 col-md-8 col-lg-9">
+            <p><b>Az évszázad új fizikai elméletei közül csak ezek egyike került axiomatizálásra az 1930-as évek végére: a kvantummechanika.</b> A kvantummechanika – a halmazelmélethez hasonlóan – a  kezdeti krízis állapotában volt; filozófiai és technikai jellegű problémákkal nézett szembe. Egyrészt a nyilvánvaló nem determinisztikus jellege nem szűnt meg, ahogy Albert Einstein hitte,  hogy meg kell történnie ahhoz, hogy kielégítő és teljes legyen. Másrészt két független, de ekvivalens heurisztikus megfogalmazása volt, a Werner Heisenberg által bevezetett mátrixmechanikai és az Erwin Schrödinger által kifejlesztett hullámmechanikai kép, de nem volt egy kielégítő egyesített megfogalmazása.</p>
+        </div>
+
+        <div class="col-sm-12 col-md-4 col-lg-3">
+            <img class="pfp mmm img-fluid" src="./neumanngep.jpg" alt="Gép">
+        </div>
+    </div>
+
+    <br>
+    <br>
+
+<footer class="container-fluid">
+    <div class="row">
+        <div class="col-sm-12 col-md-12 col-lg-12">
+            <p><b><i>Pongrácz Gábor, Birovits Bence</i></b></p>
+            <p><b><i>BMSZC Neumann János Informatikai Technikum</i></b></p>
+        </div>
+    </div>
+</footer>
+
+</body>
+</html>
