--- a/Home.html
+++ b/Home.html
@@ -31,20 +31,21 @@
 
   <br>
   <h1><b>Neumann János</b></h1>
+
+<div class="container">
+
   <br>
   <hr>
   <br>
 
-
-<div class="container-fluid">
   <div class="row">
 
-      <div class="col-sm-12 col-md-5 col-lg-5">
-        <img class="mmm img-fluid pfp" src="./neumann-janos-003-wikipedia.jpg" alt="Neumann János">
+      <div class="col-sm-12 col-md-6 col-lg-6">
+        <img class="img-fluid pfp" src="./neumann-janos-003-wikipedia.jpg" alt="Neumann János">
       </div>
 
-      <div class="col-sm-12 col-md-7 col-lg-7">
-        <p class="tx mmm"><b>Margittai Neumann János</b> (John von Neumann, született: Neumann János Lajos) (Budapest, Lipótváros, 1903. december 28. – Washington, 1957. február 8.) magyar születésű matematikus. Kvantummechanikai elméleti kutatásai mellett a digitális számítógép elvi alapjainak lefektetésével vált ismertté.</p>
+      <div class="col-sm-12 col-md-6 col-lg-6">
+        <h3><b>Margittai Neumann János</b> (John von Neumann, született: Neumann János Lajos) (Budapest, Lipótváros, 1903. december 28. – Washington, 1957. február 8.) magyar születésű matematikus. Kvantummechanikai elméleti kutatásai mellett a digitális számítógép elvi alapjainak lefektetésével vált ismertté.</h3>
       </div>
 
   </div>
@@ -55,31 +56,29 @@
 
   <div class="row">
     <div class="col-sm-12 col-md-6 col-lg-8">
-      <p class="mmm tx2">
+      <h3>
         <b>Édekességek Nemann Jánosról:</b>
         János már korán kortársait jóval meghaladó képességekről tett tanúbizonyságot beszélt magyarul, németül, franciául, latinul, ógörögül kitűnően számolt fejben.
         Az elektronikus számítógépek logikai tervezésében kiemelkedő érdemeket szerzett Neumann-elvek: kettes számrendszer alkalmazása, memória, programtárolás, utasítás rendszer 1944 – EDVAC megépítése (az első olyan számítógép, amely a memóriában tárolja a programot is) együtt dolgozott: Kemény Jánossan, Szilárd Leóval, és Gróf Andrással (Andrew Grove).
         Budapesten és Székesfehérváron utcát, Budapesten főiskolai kart és szakközépiskolát, Egerben pedig gimnáziumot neveztek el róla a Financial Times 2000-ben a 20. század emberének nevezte őt.
-      </p>
+      </h3>
     </div>
   
     <div class="col-sm-12 col-md-6 col-lg-4 float-right">
-        <img class="mmm doki img-fluid" src="./Dokika.jpg.png" alt="Neumann">
+        <img class="doki img-fluid" src="./Dokika.jpg.png" alt="Neumann">
     </div>
 
   </div>
-      <h4 class="mmm fels"><b>Főbb Neumann-elvek:</b></h4>
+      <h4 class="felsc"><b>Főbb Neumann-elvek:</b></h4>
         <ul>
-          <li class="mmm">belső program- és adattárolás</li>
-          <li class="mmm">teljesen elektronikus számítógép</li>
-          <li class="mmm">kettes számrendszer alkalmazása</li>
-          <li class="mmm">központi vezérlőegység alkalmazása</li>
+          <li class="fels">belső program- és adattárolás</li>
+          <li class="fels">teljesen elektronikus számítógép</li>
+          <li class="fels">kettes számrendszer alkalmazása</li>
+          <li class="fels">központi vezérlőegység alkalmazása</li>
         </ul>
-
         <br>
-
     <div>
-      <p class="mmm idt">„A munka oroszlánrészét akkor kell majd elvégezni, ha a gép már elkészült, és használható lesz. Ekkor magát a gépet kell majd kísérleti eszközként fölhasználni.”</p><p class="mmm italic"> - Neumann János</p>
+      <p class="idt">„A munka oroszlánrészét akkor kell majd elvégezni, ha a gép már elkészült, és használható lesz. Ekkor magát a gépet kell majd kísérleti eszközként fölhasználni.”</p><p class="mmm italic"> - Neumann János</p>
     </div>
 </div>    
 
