--- a/Secound.html
+++ b/Secound.html
@@ -31,20 +31,21 @@
 
     <br>
     <h1><b>Neumann János</b></h1>
+
+<div class="container">
+
     <br>
     <hr>
     <br>
 
-
-<div class="container-fluid">
     <div class="row">
         <div class="col-sm-12 col-md-7 col-lg-8">
-            <p class="mmm tx2">   
+            <h3>   
                 <b>1903. december 28-án született Neumann Miksa és Kann Margit első gyermekeként Budapesten,</b> a Váci körút (ma Bajcsy-Zsilinszky út) 62. sz. házban. Jánosnak később két öccse is született: Mihály (1907) és Miklós (1911). Az édesapja Pécsről származott, és Budapesten ügyvédként dolgozott, aztán a Magyar Jelzálog- és Hitelbankhoz került először fő jogtanácsosi pozícióba, majd pedig a bank igazgatói székébe. János édesanyja, Margit a háztartást vezette és fiai nevelésével foglalatoskodott.
-            </p>
+            </h3>
         </div>
         <div class="col-sm-12 col-md-5 col-lg-4">
-            <img class="mmm csalad img-fluid" src="./csalad.jpg" alt="Neumann Család">
+            <img class="csalad img-fluid" src="./csalad.jpg" alt="Neumann Család">
         </div>
     </div>
 
@@ -54,21 +55,21 @@
 
     <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-6">
-            <img class="mmm img-fluid szb" src="./szob.png" alt="Neumann János szobor">
+            <img class="img-fluid szb" src="./szob.png" alt="Neumann János szobor">
         </div>
 
         <div class="col-sm-12 col-md-6 col-lg-6">
-            <p class="mmm tx2">
+            <h3>
                 <b>Iskolái</b>
                 Neumann már tízéves kora előtt csodagyereknek számított, majd 1913-ban szülei beíratták a híres fasori evangélikus főgimnáziumba (Ágostai Hitvallású Evangélikus Főgimnázium). Ebbe az iskolába járt a Nobel-díjas Wigner Jenő (1963, fizikai) és Harsányi János (1994, közgazdasági) is, ahol mindhárman Rátz László tanár úrtól tanulták a matematikát.
-            </p class="mmm tx2">
-            <p class="mmm tx2">
+            </h3>
+            <h3>
                 <b>Kvantummechanika</b>
                 A matematikusok 1900-as nemzetközi kongresszusán (International Congress of Mathematicians) állt elő a huszonhárom problémából álló híres listájával David Hilbert.
-            </p>
-            <p class="mmm tx2">
+            </h3>
+            <h3>
                 Ezek komoly hatással voltak a 20. század matematikájának fejlődésére. Ezek közül a hatodik a fizikai elméletek axiomatizálásáról szólt.
-            </p>
+            </h3>
 
         </div>
     </div>
@@ -78,12 +79,12 @@
     <br>
 
     <div class="row">
-        <div class="tx2 col-sm-12 col-md-8 col-lg-9">
-            <p><b>Az évszázad új fizikai elméletei közül csak ezek egyike került axiomatizálásra az 1930-as évek végére: a kvantummechanika.</b> A kvantummechanika – a halmazelmélethez hasonlóan – a  kezdeti krízis állapotában volt; filozófiai és technikai jellegű problémákkal nézett szembe. Egyrészt a nyilvánvaló nem determinisztikus jellege nem szűnt meg, ahogy Albert Einstein hitte,  hogy meg kell történnie ahhoz, hogy kielégítő és teljes legyen. Másrészt két független, de ekvivalens heurisztikus megfogalmazása volt, a Werner Heisenberg által bevezetett mátrixmechanikai és az Erwin Schrödinger által kifejlesztett hullámmechanikai kép, de nem volt egy kielégítő egyesített megfogalmazása.</p>
+        <div class="col-sm-12 col-md-8 col-lg-9">
+            <h3><b>Az évszázad új fizikai elméletei közül csak ezek egyike került axiomatizálásra az 1930-as évek végére: a kvantummechanika.</b> A kvantummechanika – a halmazelmélethez hasonlóan – a  kezdeti krízis állapotában volt; filozófiai és technikai jellegű problémákkal nézett szembe. Egyrészt a nyilvánvaló nem determinisztikus jellege nem szűnt meg, ahogy Albert Einstein hitte,  hogy meg kell történnie ahhoz, hogy kielégítő és teljes legyen. Másrészt két független, de ekvivalens heurisztikus megfogalmazása volt, a Werner Heisenberg által bevezetett mátrixmechanikai és az Erwin Schrödinger által kifejlesztett hullámmechanikai kép, de nem volt egy kielégítő egyesített megfogalmazása.</h3>
         </div>
 
         <div class="col-sm-12 col-md-4 col-lg-3">
-            <img class="pfp mmm img-fluid" src="./neumanngep.jpg" alt="Gép">
+            <img class="pfp img-fluid" src="./neumanngep.jpg" alt="Gép">
         </div>
     </div>
 </div>
