--- a/Third.html
+++ b/Third.html
@@ -30,19 +30,21 @@
 
     <br>
     <h1><b>Neumann János</b></h1>
-    <br>
-    <hr>
-    <br>
 
-    <div class="container-fluid">
+    <div class="container">
+
+        <br>
+        <hr>
+        <br>
+
         <div class="row">
             <div class="col-sm-12 col-md-9 col-lg-9">
-                <p class="mmm tx2">
+                <h3 class="tm">
                     <b>Amerika</b>1930-ban meghívták vendégprofesszornak az Egyesült Államokba, a Princetoni Egyetemre. Hamarosan az ottani egyetem professzora lett (1930-1931), majd az újonnan megnyílt princetoni Institute for Advanced Studies professzora (1933–1955) – John von Neumann néven –, ahol a világ legkiválóbb tudósai gyűltek össze.
-                </p>
+                </h3>
             </div>
             <div class="col-sm-12 col-md-3 col-lg-3">
-                <img class="img-fluid tp mmm" src="./Neumann.k.png" alt="Naumann János (terem)">
+                <img class="img-fluid tp12" src="./Neumann.k.png" alt="Naumann János (terem)">
             </div>
         </div>
 
@@ -52,12 +54,12 @@
 
         <div class="row">
             <div class="col-sm-12 col-md-3 col-lg-3">
-                <img class="img-fluid tp mmm" src="./atombomba.png" alt="Atombomba">
+                <img class="img-fluid tp12" src="./atombomba.png" alt="Atombomba">
             </div>
             <div class="col-sm-12 col-md-9 col-lg-9">
-                <p class="mmm tx2">
+                <h3 class="tm">
                     <b>A második világháború idején</b> addigi tevékenysége mellett – számos más természettudóshoz hasonlóan – ő is bekapcsolódott a haditechnikai kutatásokba. Rendszeresen járt Los Alamosba, ahol részt vett az első atombomba megépítésével kapcsolatos titkos programban, az előállítással kapcsolatos elméleti munkában.
-                </p>
+                </h3>
             </div>
         </div>
         
@@ -67,12 +69,12 @@
 
         <div class="row">
             <div class="col-sm-12 col-md-9 col-lg-9">
-                <p class="mmm tx2">
+                <h3 class="tm">
                     <b>Az 1930-as évek végétől</b> érdeklődése egyre jobban az alkalmazott matematikai problémák felé fordult.
-                </p>
+                </h3>
             </div>
             <div class="col-sm-12 col-md-3 col-lg-3">
-                <img class="img-fluid tp mmm" src="./Neumann olvas.png" alt="Naumann jános">
+                <img class="img-fluid tp35" src="./Neumann olvas.png" alt="Naumann jános">
             </div>
         </div>
 
@@ -82,12 +84,12 @@
 
         <div class="row">
             <div class="col-sm-12 col-md-3 col-lg-3">
-                <img class="img-fluid tp mmm" src="./Neumann arc.jpg" alt="Naumann János arckép">
+                <img class="img-fluid tp4" src="./Neumann arc.jpg" alt="Naumann János arckép">
             </div>
             <div class="col-sm-12 col-md-9 col-lg-9">
-                <p class="mmm tx2">
+                <h3 class="tm">
                     <b>1951-től 1954-ig az Amerikai társaság elnöke volt.</b> Megkapta az Egyesült Államok Érdemérmét (1954), amiért útjára indította a 20. század második felének informatikai forradalmát.
-                </p>
+                </h3>
             </div>
         </div>
         
@@ -97,12 +99,12 @@
 
         <div class="row">
             <div class="col-sm-12 col-md-9 col-lg-9">
-                <p class="mmm tx2">
+                <h3 class="tm">
                     <b>Az öttagú Atomenergia Bizottság (AEC) tagjává nevezték ki,</b> amely akkor a legmagasabb szintű kormánymegbízatásnak számított egy tudós számára. Az atom- és hidrogénbombák kísérleti robbantásainál az ott keletkező lökéshullámok tanulmányozása során olyan bonyolult matematikai összefüggéseket fedezett fel, amelyek a klasszikus módszerekkel már nem voltak megoldhatók.
-                </p>
+                </h3>
             </div>
             <div class="col-sm-12 col-md-3 col-lg-3">
-                <img class="img-fluid tp mmm" src="./maghasadas.jpg" alt="Maghasadás ábra">
+                <img class="img-fluid tp35" src="./maghasadas.jpg" alt="Maghasadás ábra">
             </div>
         </div>
 
@@ -112,12 +114,12 @@
 
         <div class="row">
             <div class="col-sm-12 col-md-3 col-lg-3">
-                <img class="img-fluid tp mmm" src="./Neuamnnesmas.png" alt="Naumann János">
+                <img class="img-fluid tp6" src="./Neuamnnesmas.png" alt="Naumann János">
             </div>
             <div class="col-sm-12 col-md-9 col-lg-9">
-                <p class="mmm tx2">
+                <h3 class="tm">
                     <b>Ekkor</b> fordult érdeklődése a nagysebességű elektronikus számítások lehetősége felé.
-                </p>
+                </h3>
             </div>
         </div>
     </div>
