--- a/Secound.html
+++ b/Secound.html
@@ -40,12 +40,12 @@
 
     <div class="row">
         <div class="col-sm-12 col-md-7 col-lg-8">
-            <h3>   
+            <h3 class="fsm">   
                 <b>1903. december 28-án született Neumann Miksa és Kann Margit első gyermekeként Budapesten,</b> a Váci körút (ma Bajcsy-Zsilinszky út) 62. sz. házban. Jánosnak később két öccse is született: Mihály (1907) és Miklós (1911). Az édesapja Pécsről származott, és Budapesten ügyvédként dolgozott, aztán a Magyar Jelzálog- és Hitelbankhoz került először fő jogtanácsosi pozícióba, majd pedig a bank igazgatói székébe. János édesanyja, Margit a háztartást vezette és fiai nevelésével foglalatoskodott.
             </h3>
         </div>
         <div class="col-sm-12 col-md-5 col-lg-4">
-            <img class="csalad img-fluid" src="./csalad.jpg" alt="Neumann Család">
+            <img class="pbr img-fluid" src="./csalad.jpg" alt="Neumann Család">
         </div>
     </div>
 
@@ -55,19 +55,19 @@
 
     <div class="row">
         <div class="col-sm-12 col-md-6 col-lg-6">
-            <img class="img-fluid szb" src="./szob.png" alt="Neumann János szobor">
+            <img class="pbr img-fluid" src="./szob.png" alt="Neumann János szobor">
         </div>
 
         <div class="col-sm-12 col-md-6 col-lg-6">
-            <h3>
+            <h3 class="fsm">
                 <b>Iskolái</b>
                 Neumann már tízéves kora előtt csodagyereknek számított, majd 1913-ban szülei beíratták a híres fasori evangélikus főgimnáziumba (Ágostai Hitvallású Evangélikus Főgimnázium). Ebbe az iskolába járt a Nobel-díjas Wigner Jenő (1963, fizikai) és Harsányi János (1994, közgazdasági) is, ahol mindhárman Rátz László tanár úrtól tanulták a matematikát.
             </h3>
-            <h3>
+            <h3 class="fsm">
                 <b>Kvantummechanika</b>
                 A matematikusok 1900-as nemzetközi kongresszusán (International Congress of Mathematicians) állt elő a huszonhárom problémából álló híres listájával David Hilbert.
             </h3>
-            <h3>
+            <h3 class="fsm">
                 Ezek komoly hatással voltak a 20. század matematikájának fejlődésére. Ezek közül a hatodik a fizikai elméletek axiomatizálásáról szólt.
             </h3>
 
@@ -80,11 +80,11 @@
 
     <div class="row">
         <div class="col-sm-12 col-md-8 col-lg-9">
-            <h3><b>Az évszázad új fizikai elméletei közül csak ezek egyike került axiomatizálásra az 1930-as évek végére: a kvantummechanika.</b> A kvantummechanika – a halmazelmélethez hasonlóan – a  kezdeti krízis állapotában volt; filozófiai és technikai jellegű problémákkal nézett szembe. Egyrészt a nyilvánvaló nem determinisztikus jellege nem szűnt meg, ahogy Albert Einstein hitte,  hogy meg kell történnie ahhoz, hogy kielégítő és teljes legyen. Másrészt két független, de ekvivalens heurisztikus megfogalmazása volt, a Werner Heisenberg által bevezetett mátrixmechanikai és az Erwin Schrödinger által kifejlesztett hullámmechanikai kép, de nem volt egy kielégítő egyesített megfogalmazása.</h3>
+            <h3 class="fsm"><b>Az évszázad új fizikai elméletei közül csak ezek egyike került axiomatizálásra az 1930-as évek végére: a kvantummechanika.</b> A kvantummechanika – a halmazelmélethez hasonlóan – a  kezdeti krízis állapotában volt; filozófiai és technikai jellegű problémákkal nézett szembe. Egyrészt a nyilvánvaló nem determinisztikus jellege nem szűnt meg, ahogy Albert Einstein hitte,  hogy meg kell történnie ahhoz, hogy kielégítő és teljes legyen. Másrészt két független, de ekvivalens heurisztikus megfogalmazása volt, a Werner Heisenberg által bevezetett mátrixmechanikai és az Erwin Schrödinger által kifejlesztett hullámmechanikai kép, de nem volt egy kielégítő egyesített megfogalmazása.</h3>
         </div>
 
         <div class="col-sm-12 col-md-4 col-lg-3">
-            <img class="pfp img-fluid" src="./neumanngep.jpg" alt="Gép">
+            <img class="pbr img-fluid" src="./neumanngep.jpg" alt="Gép">
         </div>
     </div>
 </div>
