--- a/Third.html
+++ b/Third.html
@@ -44,7 +44,7 @@
                 </h3>
             </div>
             <div class="col-sm-12 col-md-3 col-lg-3">
-                <img class="img-fluid tp12" src="./Neumann.k.png" alt="Naumann János (terem)">
+                <img class="pbr tp12 img-fluid" src="./Neumann.k.png" alt="Naumann János (terem)">
             </div>
         </div>
 
@@ -54,7 +54,7 @@
 
         <div class="row">
             <div class="col-sm-12 col-md-3 col-lg-3">
-                <img class="img-fluid tp12" src="./atombomba.png" alt="Atombomba">
+                <img class="pbr  tp12 img-fluid" src="./atombomba.png" alt="Atombomba">
             </div>
             <div class="col-sm-12 col-md-9 col-lg-9">
                 <h3 class="tm">
@@ -74,7 +74,7 @@
                 </h3>
             </div>
             <div class="col-sm-12 col-md-3 col-lg-3">
-                <img class="img-fluid tp35" src="./Neumann olvas.png" alt="Naumann jános">
+                <img class="pbr tp35 img-fluid" src="./Neumann olvas.png" alt="Naumann jános">
             </div>
         </div>
 
@@ -84,7 +84,7 @@
 
         <div class="row">
             <div class="col-sm-12 col-md-3 col-lg-3">
-                <img class="img-fluid tp4" src="./Neumann arc.jpg" alt="Naumann János arckép">
+                <img class="pbr tp4 img-fluid" src="./Neumann arc.jpg" alt="Naumann János arckép">
             </div>
             <div class="col-sm-12 col-md-9 col-lg-9">
                 <h3 class="tm">
@@ -104,7 +104,7 @@
                 </h3>
             </div>
             <div class="col-sm-12 col-md-3 col-lg-3">
-                <img class="img-fluid tp35" src="./maghasadas.jpg" alt="Maghasadás ábra">
+                <img class="pbr  tp35 img-fluid" src="./maghasadas.jpg" alt="Maghasadás ábra">
             </div>
         </div>
 
@@ -114,7 +114,7 @@
 
         <div class="row">
             <div class="col-sm-12 col-md-3 col-lg-3">
-                <img class="img-fluid tp6" src="./Neuamnnesmas.png" alt="Naumann János">
+                <img class="pbr tp6 img-fluid" src="./Neuamnnesmas.png" alt="Naumann János">
             </div>
             <div class="col-sm-12 col-md-9 col-lg-9">
                 <h3 class="tm">
