--- a/Home.html
+++ b/Home.html
@@ -28,7 +28,6 @@
     </div>
 </nav>
 
-
   <br>
   <h1><b>Neumann János</b></h1>
 
@@ -41,11 +40,11 @@
   <div class="row">
 
       <div class="col-sm-12 col-md-6 col-lg-6">
-        <img class="img-fluid pfp" src="./neumann-janos-003-wikipedia.jpg" alt="Neumann János">
+        <img class="img-fluid pbr" src="./neumann-janos-003-wikipedia.jpg" alt="Neumann János">
       </div>
 
       <div class="col-sm-12 col-md-6 col-lg-6">
-        <h3><b>Margittai Neumann János</b> (John von Neumann, született: Neumann János Lajos) (Budapest, Lipótváros, 1903. december 28. – Washington, 1957. február 8.) magyar születésű matematikus. Kvantummechanikai elméleti kutatásai mellett a digitális számítógép elvi alapjainak lefektetésével vált ismertté.</h3>
+        <h3 class="fsm"><b>Margittai Neumann János</b> (John von Neumann, született: Neumann János Lajos) (Budapest, Lipótváros, 1903. december 28. – Washington, 1957. február 8.) magyar születésű matematikus. Kvantummechanikai elméleti kutatásai mellett a digitális számítógép elvi alapjainak lefektetésével vált ismertté.</h3>
       </div>
 
   </div>
@@ -56,7 +55,7 @@
 
   <div class="row">
     <div class="col-sm-12 col-md-6 col-lg-8">
-      <h3>
+      <h3 class="fsm">
         <b>Édekességek Nemann Jánosról:</b>
         János már korán kortársait jóval meghaladó képességekről tett tanúbizonyságot beszélt magyarul, németül, franciául, latinul, ógörögül kitűnően számolt fejben.
         Az elektronikus számítógépek logikai tervezésében kiemelkedő érdemeket szerzett Neumann-elvek: kettes számrendszer alkalmazása, memória, programtárolás, utasítás rendszer 1944 – EDVAC megépítése (az első olyan számítógép, amely a memóriában tárolja a programot is) együtt dolgozott: Kemény Jánossan, Szilárd Leóval, és Gróf Andrással (Andrew Grove).
@@ -65,19 +64,23 @@
     </div>
   
     <div class="col-sm-12 col-md-6 col-lg-4 float-right">
-        <img class="doki img-fluid" src="./Dokika.jpg.png" alt="Neumann">
+        <img class="pbr img-fluid rounded mx-auto d-block" src="./Dokika.jpg.png" alt="Neumann">
     </div>
 
   </div>
-      <h4 class="felsc"><b>Főbb Neumann-elvek:</b></h4>
-        <ul>
-          <li class="fels">belső program- és adattárolás</li>
-          <li class="fels">teljesen elektronikus számítógép</li>
-          <li class="fels">kettes számrendszer alkalmazása</li>
-          <li class="fels">központi vezérlőegység alkalmazása</li>
-        </ul>
-        <br>
-    <div>
+
+      <div class="fsm">
+        <h4 class="felsc"><b>Főbb Neumann-elvek:</b></h4>
+          <ul>
+            <li class="fels">belső program- és adattárolás</li>
+            <li class="fels">teljesen elektronikus számítógép</li>
+            <li class="fels">kettes számrendszer alkalmazása</li>
+            <li class="fels">központi vezérlőegység alkalmazása</li>
+          </ul>
+          <br>
+      </div>
+
+    <div class="fsm">
       <p class="idt">„A munka oroszlánrészét akkor kell majd elvégezni, ha a gép már elkészült, és használható lesz. Ekkor magát a gépet kell majd kísérleti eszközként fölhasználni.”</p><p class="mmm italic"> - Neumann János</p>
     </div>
 </div>    
