--- a/Home.html
+++ b/Home.html
@@ -1,101 +1,137 @@
 <!DOCTYPE html>
 <html lang="hu">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Neumann János (bevezető)</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js" integrity="sha384-u1OknCvxWvY5kfmNBILK2hRnQC3Pr17a+RTT6rIHI7NnikvbZlHgTPOOmMi466C8" crossorigin="anonymous"></script>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-  <a class="navbar-brand ms-3 cc" href="./Home.html">Neu</a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi"
+      crossorigin="anonymous"
+    />
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="style.css" />
+  </head>
+  <body>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light p-3">
+      <a class="navbar-brand cc" href="./Home.html">Neu</a>
+      <button
+        class="navbar-toggler"
+        type="button"
+        data-bs-toggle="collapse"
+        data-bs-target="#navbarNavAltMarkup"
+        aria-controls="navbarNavAltMarkup"
+        aria-expanded="false"
+        aria-label="Toggle navigation"
+      >
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav">
           <a class="nav-link mmm" href="./Secound.html">2. oldal</a>
-        </li>
-        <li class="nav-item">
-            <a class="nav-link mmm" href="./Third.html">3. oldal</a>
-        </li>
-      </ul>
-    </div>
-</nav>
+          <a class="nav-link mmm" href="./Third.html">3. oldal</a>
+        </div>
+      </div>
+    </nav>
 
-  <br>
-  <h1><b>Neumann János</b></h1>
+    <br />
+    <h1><b>Neumann János</b></h1>
 
-<div class="container">
+    <div class="container">
+      <br />
+      <hr />
+      <br />
 
-  <br>
-  <hr>
-  <br>
+      <div class="row">
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <img
+            class="img-fluid pbr"
+            src="./neumann-janos-003-wikipedia.jpg"
+            alt="Neumann János"
+          />
+        </div>
 
-  <div class="row">
-
-      <div class="col-sm-12 col-md-6 col-lg-6">
-        <img class="img-fluid pbr" src="./neumann-janos-003-wikipedia.jpg" alt="Neumann János">
+        <div class="col-sm-12 col-md-6 col-lg-6">
+          <h3 class="fsm">
+            <b>Margittai Neumann János</b> (John von Neumann, született: Neumann
+            János Lajos) (Budapest, Lipótváros, 1903. december 28. – Washington,
+            1957. február 8.) magyar születésű matematikus. Kvantummechanikai
+            elméleti kutatásai mellett a digitális számítógép elvi alapjainak
+            lefektetésével vált ismertté.
+          </h3>
+        </div>
       </div>
 
-      <div class="col-sm-12 col-md-6 col-lg-6">
-        <h3 class="fsm"><b>Margittai Neumann János</b> (John von Neumann, született: Neumann János Lajos) (Budapest, Lipótváros, 1903. december 28. – Washington, 1957. február 8.) magyar születésű matematikus. Kvantummechanikai elméleti kutatásai mellett a digitális számítógép elvi alapjainak lefektetésével vált ismertté.</h3>
+      <br />
+      <hr />
+      <br />
+
+      <div class="row">
+        <div class="col-sm-12 col-md-6 col-lg-8">
+          <h3 class="fsm">
+            <b>Édekességek Nemann Jánosról:</b>
+            János már korán kortársait jóval meghaladó képességekről tett
+            tanúbizonyságot beszélt magyarul, németül, franciául, latinul,
+            ógörögül kitűnően számolt fejben. Az elektronikus számítógépek
+            logikai tervezésében kiemelkedő érdemeket szerzett Neumann-elvek:
+            kettes számrendszer alkalmazása, memória, programtárolás, utasítás
+            rendszer 1944 – EDVAC megépítése (az első olyan számítógép, amely a
+            memóriában tárolja a programot is) együtt dolgozott: Kemény
+            Jánossan, Szilárd Leóval, és Gróf Andrással (Andrew Grove).
+            Budapesten és Székesfehérváron utcát, Budapesten főiskolai kart és
+            szakközépiskolát, Egerben pedig gimnáziumot neveztek el róla a
+            Financial Times 2000-ben a 20. század emberének nevezte őt.
+          </h3>
+        </div>
+
+        <div class="col-sm-12 col-md-6 col-lg-4 float-right">
+          <img
+            class="pbr img-fluid rounded mx-auto d-block"
+            src="./Dokika.jpg.png"
+            alt="Neumann"
+          />
+        </div>
       </div>
-
-  </div>
-
-    <br>
-    <hr>
-    <br>
-
-  <div class="row">
-    <div class="col-sm-12 col-md-6 col-lg-8">
-      <h3 class="fsm">
-        <b>Édekességek Nemann Jánosról:</b>
-        János már korán kortársait jóval meghaladó képességekről tett tanúbizonyságot beszélt magyarul, németül, franciául, latinul, ógörögül kitűnően számolt fejben.
-        Az elektronikus számítógépek logikai tervezésében kiemelkedő érdemeket szerzett Neumann-elvek: kettes számrendszer alkalmazása, memória, programtárolás, utasítás rendszer 1944 – EDVAC megépítése (az első olyan számítógép, amely a memóriában tárolja a programot is) együtt dolgozott: Kemény Jánossan, Szilárd Leóval, és Gróf Andrással (Andrew Grove).
-        Budapesten és Székesfehérváron utcát, Budapesten főiskolai kart és szakközépiskolát, Egerben pedig gimnáziumot neveztek el róla a Financial Times 2000-ben a 20. század emberének nevezte őt.
-      </h3>
-    </div>
-  
-    <div class="col-sm-12 col-md-6 col-lg-4 float-right">
-        <img class="pbr img-fluid rounded mx-auto d-block" src="./Dokika.jpg.png" alt="Neumann">
-    </div>
-
-  </div>
 
       <div class="fsm">
         <h4 class="felsc"><b>Főbb Neumann-elvek:</b></h4>
-          <ul>
-            <li class="fels">belső program- és adattárolás</li>
-            <li class="fels">teljesen elektronikus számítógép</li>
-            <li class="fels">kettes számrendszer alkalmazása</li>
-            <li class="fels">központi vezérlőegység alkalmazása</li>
-          </ul>
-          <br>
+        <ul>
+          <li class="fels">belső program- és adattárolás</li>
+          <li class="fels">teljesen elektronikus számítógép</li>
+          <li class="fels">kettes számrendszer alkalmazása</li>
+          <li class="fels">központi vezérlőegység alkalmazása</li>
+        </ul>
+        <br />
       </div>
 
-    <div class="fsm">
-      <p class="idt">„A munka oroszlánrészét akkor kell majd elvégezni, ha a gép már elkészült, és használható lesz. Ekkor magát a gépet kell majd kísérleti eszközként fölhasználni.”</p><p class="mmm italic"> - Neumann János</p>
+      <div class="fsm">
+        <p class="idt">
+          „A munka oroszlánrészét akkor kell majd elvégezni, ha a gép már
+          elkészült, és használható lesz. Ekkor magát a gépet kell majd
+          kísérleti eszközként fölhasználni.”
+        </p>
+        <p class="mmm italic">- Neumann János</p>
+      </div>
     </div>
-</div>    
 
-  <br>
-  <br>
+    <br />
+    <br />
 
-<footer class="container-fluid">
-  <div class="row">
-    <div class="col-sm-12 col-md-12 col-lg-12">
-      <p><b><i>Pongrácz Gábor, Birovits Bence</i></b></p>
-      <p><b><i>BMSZC Neumann János Informatikai Technikum</i></b></p>
-    </div>
-  </div>
-</footer>
-    
-</body>
+    <footer class="footer container-fluid bg-white">
+      <div class="container">
+        <div class="row">
+          <div class="col-12 fst-italic fw-bold py-3 text-center">
+            <p class="m-0">Pongrácz Gábor, Birovits Bence</p>
+            <p class="m-0">BMSZC Neumann János Informatikai Technikum</p>
+          </div>
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
