Summery of the pages

--- a/Home.html
+++ b/Home.html
@@ -118,6 +118,26 @@
         </p>
         <p class="mmm italic">- Neumann János</p>
       </div>
+
+      <br />
+      <hr />
+      <br />
+
+      <div class="fsm">
+        <h3 class="tac">
+          <b>Summary of the page:</b>
+        </h3>
+        <h3>
+          It contains a brief description of the life of János Margittai
+          Neumann, when he was born and when he died. Also, about his computer
+          activities. In addition, some interesting facts, his main principles
+          and his quote are described.
+        </h3>
+      </div>
+
+      <br />
+      <hr />
+      <br />
     </div>
 
     <br />
