--- a/Secound.html
+++ b/Secound.html
@@ -133,6 +133,25 @@
           <img class="pbr img-fluid" src="./neumanngep.jpg" alt="Gép" />
         </div>
       </div>
+
+      <br />
+      <hr />
+      <br />
+
+      <div class="fsm">
+        <h3 class="tac">
+          <b>Summary of the page:</b>
+        </h3>
+        <h3>
+          It includes when his first child was born in Budapest. Later, he also
+          had two younger brothers. Also in connection with his school studies.
+          In addition, his activities related to Quantum Mechanics.
+        </h3>
+      </div>
+
+      <br />
+      <hr />
+      <br />
     </div>
 
     <br />
