--- a/Third.html
+++ b/Third.html
@@ -174,6 +174,25 @@
           </h3>
         </div>
       </div>
+
+      <br />
+      <hr />
+      <br />
+
+      <div class="tm">
+        <h3 class="tac">
+          <b>Summary of the page:</b>
+        </h3>
+        <h3>
+          It contains that he was invited to America in 1930 as a visiting
+          professor. The whole page is about his trip to America, when, how, and
+          what he did, and what he participated in.
+        </h3>
+      </div>
+
+      <br />
+      <hr />
+      <br />
     </div>
 
     <br />
